--- a/index.html
+++ b/index.html
@@ -471,5 +471,16 @@
 
   vegaEmbed("#chart-scatter-ci-abs", specScatterCiAbs, {actions: false});
 </script>
+<footer style="font-size:12px; margin-top:20px; color:#555;">
+  <strong>Disclaimer:</strong>
+  The analyses and visualizations presented on this dashboard are based on 
+  a re-elaboration of the data and methodology described in 
+  Saisana, M., d’Hombres, B., &amp; Saltelli, A. (2011),
+  <em>“Rickety numbers: Volatility of university rankings and policy implications”</em>.
+  The data have been processed and transformed for illustrative purposes, 
+  and may not reproduce the exact numerical values of the original publication. 
+  This dashboard is intended solely for educational and analytical use. 
+  No responsibility is taken for decisions made on the basis of these visualizations.
+</footer>
 </body>
 </html>
